Borre el 123 del Lorem

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="content">
             <div class="about-text">
                 <h3>Quienes Somos</h3>
-                <p>Lorem ipsum 123 dolor sit amet consectetur adipisicing elit. Dolore odio alias ut rem consequatur
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio alias ut rem consequatur
                     provident dolores quasi dicta perferendis. In unde similique blanditiis eligendi, vitae quisquam
                     reprehenderit voluptatum dolore itaque.</p>
                 <a href="#" class="btn2">Saber Más</a>
