--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alto Comunidades 2</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
             <li><a href="#team" onclick="alternar()">Equipo</a></li>
             <li class="btn"><a href="#">Ingresar</a></li>          
         </ul>
-        <div class="toggle" onclick="alternar()"></div>       
+        <div class="toggle" onclick="alternar()"></div>  
     </header>
 
     <section class="banner" id="home">
