Separación de HTML's

--- a/Noticia4.html
+++ b/Noticia4.html
@@ -12,7 +12,14 @@
     <header>
         <img src="img/logo.png" class="logo" alt="">
         <ul>
-            <li><a href="index.html" onclick="alternar()">inicio</a></li>            
+            <li><a href="index.html" onclick="alternar()">inicio</a></li>
+            <li><a href="Nosotros.html" onclick="alternar()">Nosotros</a></li>
+            <li><a href="Servicios.html" onclick="alternar()">Servicios</a></li>
+            <li><a href="Noticias.html" onclick="alternar()">Noticias</a></li>
+            <li><a href="Team.html" onclick="alternar()">Equipo</a></li>
+            <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>            
+            <li class="btn"><a href="#">Ingresar</a></li>                    
+        </ul>            
     </header>
     <h5>Noticia 4</h5>
     <div class="container">
