--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <header>
         <img src="img/logo.png" class="logo" alt="">        
         <ul>
-            <li><a href="#home" onclick="alternar()">inicio</a></li>
-            <li><a href="#about" onclick="alternar()">Nosotros</a></li>
-            <li><a href="#services" onclick="alternar()">Servicios</a></li>
-            <li><a href="#news" onclick="alternar()">Noticias</a></li>
-            <li><a href="#contact" onclick="alternar()">Contacto</a></li>
-            <li><a href="#team" onclick="alternar()">Equipo</a></li>
+            <li><a href="index.html" onclick="alternar()">inicio</a></li>
+            <li><a href="Nosotros.html" onclick="alternar()">Nosotros</a></li>
+            <li><a href="Servicios.html" onclick="alternar()">Servicios</a></li>
+            <li><a href="Noticias.html" onclick="alternar()">Noticias</a></li>
+            <li><a href="Team.html" onclick="alternar()">Equipo</a></li>
+            <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>            
             <li class="btn"><a href="#">Ingresar</a></li>          
         </ul>
         <div class="toggle" onclick="alternar()"></div>  
@@ -25,67 +25,7 @@
 
     <section class="banner" id="home">
         <h2>ALTO COMUNIDADES</h2>
-    </section>
-
-    <!--=================
-    Nosotros
-    =================-->
-
-    <section class="sec" id="about">
-        <div class="content">
-            <div class="about-text">
-                <h3>Quienes Somos</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio alias ut rem consequatur
-                    provident dolores quasi dicta perferendis. In unde similique blanditiis eligendi, vitae quisquam
-                    reprehenderit voluptatum dolore itaque.</p>
-                <a href="#" class="btn2">Saber Más</a>
-            </div>
-        </div>
-    </section>
-
-    <!--=================
-    Servicios
-    =================-->
-
-    <section class="sec" id="services">
-        <div class="content">
-            <div class="about-text">
-                <h3>Servicios</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, explicabo optio magnam dolor, quasi ea
-                    ex vel quo unde ratione voluptas voluptatum laudantium, atque illum repellat placeat assumenda
-                    doloremque hic?</p>
-            </div>
-            <div class="services">
-                <div class="box">
-                    <div class="iconbx">
-                        <img src="img/home.svg">
-                    </div>
-                    <div class="content">
-                        <h2>Administración de Edificios</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, magni!</p>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="iconbx">
-                        <img src="img/home.svg">
-                    </div>
-                    <div class="content">
-                        <h2>Outsourcing</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, magni!</p>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="iconbx">
-                        <img src="img/home.svg">
-                    </div>
-                    <div class="content">
-                        <h2>Corredora</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, magni!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    </section>    
 
     <!--=================
     Logros
@@ -121,144 +61,9 @@
     </section>
 
     <!--=================
-    Noticias
+    Footer
     =================-->
-    <section class="sec work" id="news">
-        <div class="content">
-            <div class="about text">
-                <h3>Noticias</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum saepe, impedit omnis consectetur
-                    molestiae eveniet cumque ex itaque consequatur aliquam reprehenderit accusantium dolor,
-                    necessitatibus atque laboriosam similique, explicabo sapiente voluptatibus.</p>
-            </div>
-            <div class="news">
-                <div class="brand">
-                    <a href="Noticia1.html">
-                        <h2>Noticia 1</h2>
-                    </a>
-                </div>
-                <div class="brand">
-                    <a href="Noticia2.html">
-                        <h2>Noticia 2</h2>
-                    </a>
-                </div>
-                <div class="brand">
-                    <a href="Noticia3.html">
-                        <h2>Noticia 3</h2>
-                    </a>
-                </div>
-                <div class="brand">
-                    <a href="Noticia4.html">
-                        <h2>Noticia 4</h2>
-                    </a>
-                </div>
-                <div class="brand">
-                    <a href="#">
-                        <h2>Noticia 5</h2>
-                    </a>
-                </div>
-                <div class="brand">
-                    <a href="#">
-                        <h2>Noticia 6</h2>
-                    </a>
-                </div>
-                <div class="brand">
-                    <a href="#">
-                        <h2>Noticia 7</h2>
-                    </a>
-                </div>
-                <div class="brand">
-                    <a href="#">
-                        <h2>Noticia 8</h2>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--=================
-        Team
-    =================-->
-
-    <section class="sec" id="team">
-        <div class="content">
-            <div class="about text">
-                <h3>Conoce a Nuestro Equipo</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque eius ea pariatur nemo animi
-                    consectetur expedita, molestiae doloremque vitae corrupti! Earum ipsum molestiae adipisci doloremque
-                    impedit laudantium, id ut exercitationem!</p>
-            </div>
-            <div class="teambx">
-                <div class="member">
-                    <div class="imgbx">
-                        <img src="img/team.png">
-                    </div>
-                    <div class="details">
-                        <h2>VANESSA <br> <span> Contador Auditor</span></h2>
-                    </div>
-                </div>
-                <div class="member">
-                    <div class="imgbx">
-                        <img src="img/team.png">
-                    </div>
-                    <div class="details">
-                        <h2>ALEJANDRO <br> <span> Supervisor Inmobiliario</span></h2>
-                    </div>
-                </div>
-                <div class="member">
-                    <div class="imgbx">
-                        <img src="img/team.png">
-                    </div>
-                    <div class="details">
-                        <h2>TAMARA <br> <span> Gerente General</span></h2>
-                    </div>
-                </div>
-                <div class="member">
-                    <div class="imgbx">
-                        <img src="img/team.png">
-                    </div>
-                    <div class="details">
-                        <h2>MAURICIO <br> <span> Gerente Personas</span></h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--=================
-        Contacto
-    =================-->
-
-    <section class="sec contact" id="contact">
-        <div class="content">
-            <div class="about-text">
-                <h3> Escribe para más Información</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore modi amet, dolorem dolorum
-                    assumenda aspernatur, voluptates mollitia nostrum ducimus non sapiente eaque. Nihil veniam sequi
-                    incidunt laudantium quaerat. Porro, doloribus!</p>
-            </div>
-            <div class="contactform">
-                <form id="form">
-                    <div class="row100">
-                        <div class="inputbx50">
-                            <input type="text" name="" placeholder="Nombre">                        
-                        </div>
-                        <div class="inputbx50">
-                            <input type="text" name="" placeholder="Email">                        
-                        </div>
-                    </div>    
-                    <div class="row100">
-                        <div class="inputbx100">
-                            <textarea placeholder="Mensaje"></textarea>
-                        </div>
-                    </div>
-                    <div class="row100">
-                        <div class="inputbx100">
-                            <input type="submit" value="Enviar">
-                        </div>
-                    </div>
-                </form>
-            </div>            
-        </div>
-    </section>
+    
     <footer class="footer">
         <div class="container">
             <div class="footer-row">
