--- a/index.html
+++ b/index.html
@@ -6,26 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alto Comunidades 2</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- Link de BT-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Link de mi CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <img src="img/logo.png" class="logo" alt="">        
+        <img src="img/logo.png" class="logo" alt="">
         <ul>
             <li><a href="index.html" onclick="alternar()">inicio</a></li>
             <li><a href="Nosotros.html" onclick="alternar()">Nosotros</a></li>
             <li><a href="Servicios.html" onclick="alternar()">Servicios</a></li>
             <li><a href="Noticias.html" onclick="alternar()">Noticias</a></li>
             <li><a href="Team.html" onclick="alternar()">Equipo</a></li>
-            <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>            
-            <li class="btn"><a href="#">Ingresar</a></li>          
+            <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>
+            <li class="btn"><a href="#">Ingresar</a></li>
         </ul>
-        <div class="toggle" onclick="alternar()"></div>  
+        <div class="toggle" onclick="alternar()"></div>
     </header>
 
     <section class="banner" id="home">
         <h2>ALTO COMUNIDADES</h2>
-    </section>    
+    </section>
 
     <!--=================
     Logros
@@ -63,35 +68,35 @@
     <!--=================
     Footer
     =================-->
-    
+
     <footer class="footer">
         <div class="container">
             <div class="footer-row">
                 <div class="footer-links">
                     <h4>compañia</h4>
-                    <ul>                        
+                    <ul>
                         <li><a href="">Nosotros</a></li>
                         <li><a href="">Política de Privacidad</a></li>
                         <li><a href="">Comunidad</a></li>
-                        <li><a href="">Enlaces</a></li>                       
+                        <li><a href="">Enlaces</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>Ayuda</h4>
-                    <ul>                        
+                    <ul>
                         <li><a href="">Preguntas</a></li>
                         <li><a href="">Apoyo</a></li>
                         <li><a href="">Edificios</a></li>
-                        <li><a href="">Presupuestos</a></li>                       
+                        <li><a href="">Presupuestos</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>Aliados</h4>
-                    <ul>                        
+                    <ul>
                         <li><a href="">Proovedores</a></li>
                         <li><a href="">Mantenimiento</a></li>
                         <li><a href="">Softwares</a></li>
-                        <li><a href="">Junta de Vecinos</a></li>                       
+                        <li><a href="">Junta de Vecinos</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
@@ -102,15 +107,15 @@
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                     </div>
+                </div>
             </div>
-        </div>
     </footer>
-    <script type= "text/javascript">
-        window.addEventListener("scroll", function(){
+    <script type="text/javascript">
+        window.addEventListener("scroll", function () {
             var header = document.querySelector("header");
             header.classList.toggle("sticky", window.scrollY > 0);
         })
-        function alternar(){
+        function alternar() {
             var header = document.querySelector("header");
             header.classList.toggle("active");
         }        
