--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alto Comunidades 2</title>
+    <!-- Link de Fuentes-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- Link de Animate-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Link de BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Link de mi CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
         <img src="img/logo.png" class="logo" alt="">
@@ -29,7 +31,7 @@
     </header>
 
     <section class="banner" id="home">
-        <h2>ALTO COMUNIDADES</h2>
+        <h2 class="animate__animated animate__flipInY">ALTO COMUNIDADES</h2>
     </section>
 
     <!--=================
@@ -39,7 +41,7 @@
     <section class="sec stats" id="stats">
         <div class="content">
             <div class="about text">
-                <h3>Logros</h3>
+                <h3 class="animate__animated animate__flipInY">Logros</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sed eum vero nostrum pariatur earum,
                     quaerat quam delectus blanditiis harum ad. Dicta maxime ut, laboriosam molestias reiciendis alias ab
                     quidem?</p>
