--- a/Contacto.html
+++ b/Contacto.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alto Comunidades 2</title>
+    <!-- Link de Fuentes-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- Link de Animate-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Link de BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -38,7 +41,7 @@
     <section class="sec contact" id="contact">
         <div class="content">
             <div class="about-text">
-                <h3> Escribe para más Información</h3>
+                <h3 class="animate__animated animate__flipInY">Escribe para más Información</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore modi amet, dolorem dolorum
                     assumenda aspernatur, voluptates mollitia nostrum ducimus non sapiente eaque. Nihil veniam sequi
                     incidunt laudantium quaerat. Porro, doloribus!</p>
