--- a/Nosotros.html
+++ b/Nosotros.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alto Comunidades 2</title>
+    <!-- Link de Fuentes-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- Link de Animate-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Link de BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -38,7 +41,7 @@
     <section class="sec" id="about">
         <div class="content">
             <div class="about-text">
-                <h3>Quienes Somos</h3>
+                <h3 class="animate__animated animate__flipInY">Quienes Somos</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio alias ut rem consequatur
                     provident dolores quasi dicta perferendis. In unde similique blanditiis eligendi, vitae quisquam
                     reprehenderit voluptatum dolore itaque.</p>
