--- a/Noticia4.html
+++ b/Noticia4.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alto Comunidades 2</title>
+    <!-- Link de Fuentes-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- Link de Animate-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Link de BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -26,7 +29,7 @@
             <li class="btn"><a href="#">Ingresar</a></li>                    
         </ul>            
     </header>
-    <h5>Noticia 4</h5>
+    <h5 class="animate__animated animate__flipInY">Noticia 4</h5>
     <div class="container">
         
         <img class="imagen" src="img/Noticia 4.jpg" alt="">
