--- a/index.html
+++ b/index.html
@@ -41,27 +41,24 @@
     <section class="sec stats" id="stats">
         <div class="content">
             <div class="about text">
-                <h3 class="animate__animated animate__flipInY">Logros</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sed eum vero nostrum pariatur earum,
-                    quaerat quam delectus blanditiis harum ad. Dicta maxime ut, laboriosam molestias reiciendis alias ab
-                    quidem?</p>
+                <h3 class="animate__animated animate__flipInY">Logros</h3>                
             </div>
             <div class="statsbox">
                 <div class="box">
-                    <h2>50+</h2>
-                    <h4>Proyectos</h4>
+                    <h2>15 +</h2>
+                    <h4>Años de Experiencia</h4>
                 </div>
                 <div class="box">
-                    <h2>50+</h2>
+                    <h2>3500 +</h2>
                     <h4>Clientes Satisfechos</h4>
                 </div>
                 <div class="box">
-                    <h2>50+</h2>
-                    <h4>Países</h4>
+                    <h2>15 +</h2>
+                    <h4>Socios Estratégicos</h4>
                 </div>
                 <div class="box">
-                    <h2>50+</h2>
-                    <h4>Premios</h4>
+                    <h2>5 +</h2>
+                    <h4>Dominio ERP</h4>
                 </div>
             </div>
         </div>
