--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="footer-row">
                 <div class="footer-links">
-                    <h4>compañia</h4>
+                    <h4>Compañia</h4>
                     <ul>
                         <li><a href="">Nosotros</a></li>
                         <li><a href="">Política de Privacidad</a></li>
