--- a/Noticia3.html
+++ b/Noticia3.html
@@ -13,18 +13,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Link de mi CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./sass/estilos.css">
 </head>
 <body>
     <header>
         <img src="img/logo.png" class="logo" alt="">
         <ul>
-            <li><a href="index.html" onclick="alternar()">inicio</a></li>
+            <li><a href="index.html" onclick="alternar()">Inicio</a></li>
             <li><a href="Nosotros.html" onclick="alternar()">Nosotros</a></li>
             <li><a href="Servicios.html" onclick="alternar()">Servicios</a></li>
             <li><a href="Noticias.html" onclick="alternar()">Noticias</a></li>
             <li><a href="Team.html" onclick="alternar()">Equipo</a></li>
-            <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>            
+            <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>
             <li class="btn"><a href="#">Ingresar</a></li>                    
         </ul>            
     </header>
