Eliminación style.css

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -15,6 +15,7 @@
     <!-- Link de mi CSS-->
     <link rel="stylesheet" href="./sass/estilos.css">
 </head>
+
 <body>
     <header>
         <img src="img/logo.png" class="logo" alt="">
@@ -45,6 +46,11 @@
                 <p>Somos una empresa de administración inmobiliaria, orientada exclusivamente al servicio, satisfacción
                     y calidad de vida de todas las personas que habitan en una comunidad formada por profesionales de
                     excelencia y altamente calificados.</p>
+                <P>Nuestra Gestión es periódica, realizando visitas en distintos días y horarios, verificando entre
+                    otras cosas que el personal esté cumpliendo correctamente con sus labores. Además, personalmente
+                    estamos constantemente atendiendo observaciones, sugerencias y comentarios de los copropietarios,
+                    verificando el estado de los equipos, controlando sus mantenciones y revisando la buena limpieza,
+                    orden y mantención de los espacios comunes</P>
                 <a href="#" class="btn2">Saber Más</a>
             </div>
         </div>
