--- a/Noticias.html
+++ b/Noticias.html
@@ -44,22 +44,22 @@
             </div>
             <div class="news">
                 <div class="brand">
-                    <a href="Noticia1.html">
+                    <a href="#">
                         <h2>Noticia 1</h2>
                     </a>
                 </div>
                 <div class="brand">
-                    <a href="Noticia2.html">
+                    <a href="#">
                         <h2>Noticia 2</h2>
                     </a>
                 </div>
                 <div class="brand">
-                    <a href="Noticia3.html">
+                    <a href="#">
                         <h2>Noticia 3</h2>
                     </a>
                 </div>
                 <div class="brand">
-                    <a href="Noticia4.html">
+                    <a href="#">
                         <h2>Noticia 4</h2>
                     </a>
                 </div>                
