--- a/Team.html
+++ b/Team.html
@@ -40,7 +40,7 @@
 
     <section class="sec" id="team">
         <div class="content">
-            <div class="about text">
+            <div class="about-text">
                 <h3 class="animate__animated animate__flipInY">Conoce a Nuestro Equipo</h3>
                 <p>Somos una organizació de excelencia con profesionales del área de la ingeniería, especializados,
                     expertos en el área de la administración, diplomados en alta dirección con mas de 20 años de
