--- a/Servicios.html
+++ b/Servicios.html
@@ -15,6 +15,7 @@
     <!-- Link de mi CSS-->
     <link rel="stylesheet" href="./sass/estilos.css">
 </head>
+
 <body>
     <header>
         <img src="img/logo.png" class="logo" alt="">
@@ -25,14 +26,13 @@
             <li><a href="Noticias.html" onclick="alternar()">Noticias</a></li>
             <li><a href="Team.html" onclick="alternar()">Equipo</a></li>
             <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>
-            <li class="btn"><a href="#">Ingresar</a></li>
+            <li class="btn"><a href="https://altocomunidades.cl/">Ingresar</a></li>
         </ul>
         <div class="toggle" onclick="alternar()"></div>
     </header>
 
-    <section>
-        <h2>ALTO COMUNIDADES</h2>
-    </section>
+
+
 
     <!--=================
     Servicios
@@ -54,25 +54,29 @@
                     </div>
                     <div class="content">
                         <h2>Administración de Edificios</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, magni!</p>
+                        <p>Revisión completa de todos los equipos, análisis y mantención. Evaluación del personal bajo
+                            las normas de la legislación laboral vigente y aplicaciones bajo la ley de condominios</p>
                     </div>
                 </div>
                 <div class="box">
                     <div class="iconbx">
-                        <img src="img/home.svg">
+                        <img src="img/user.svg">
                     </div>
                     <div class="content">
                         <h2>Outsourcing</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, magni!</p>
+                        <p>Agilizamos el funcionamiento de tu empresa ayudando en el ahorro de costos y mejora en la
+                            capacidad productiva</p>
                     </div>
                 </div>
                 <div class="box">
                     <div class="iconbx">
-                        <img src="img/home.svg">
+                        <img src="img/auditoria.svg">
                     </div>
                     <div class="content">
-                        <h2>Corredora</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, magni!</p>
+                        <h2>Auditorías</h2>
+                        <p>Generar todos los informes que se requieran para tener un control pormenorizado de la gestión
+                            de los recursos a través de un control mensual de los movimientos contables de tu comunidad
+                        </p>
                     </div>
                 </div>
             </div>
