--- a/Team.html
+++ b/Team.html
@@ -25,14 +25,14 @@
             <li><a href="Noticias.html" onclick="alternar()">Noticias</a></li>
             <li><a href="Team.html" onclick="alternar()">Equipo</a></li>
             <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>
-            <li class="btn"><a href="#">Ingresar</a></li>
+            <li class="btn"><a href="https://altocomunidades.cl/">Ingresar</a></li>
         </ul>
         <div class="toggle" onclick="alternar()"></div>
     </header>
 
-    <section>
-        <h2>ALTO COMUNIDADES</h2>
-    </section>
+    
+
+    
 
     <!--=================
         Team
@@ -42,17 +42,15 @@
         <div class="content">
             <div class="about-text">
                 <h3 class="animate__animated animate__flipInY">Conoce a Nuestro Equipo</h3>
-                <p>Somos una organizació de excelencia con profesionales del área de la ingeniería, especializados,
+                <p>Somos una organización de excelencia con profesionales del área de la ingeniería, especializados,
                     expertos en el área de la administración, diplomados en alta dirección con mas de 20 años de
-                    experiencia, quienes son el soporte principal que permite a Alto Comunidades, desarrollar los
-                    proyectos de administración inmobiliaria. Etica, esfuerzo, responsabilidad y transparencia son las
-                    virtudes que caracterizan nuestra gestión.
+                    experiencia, quienes son el soporte principal de Alto Comunidades.
                 </p>
             </div>
             <div class="teambx">
                 <div class="member">
                     <div class="imgbx">
-                        <img src="img/team.png">
+                        <img src="img/2.jpg">
                     </div>
                     <div class="details">
                         <h2>VANESSA <br> <span> Contador Auditor</span></h2>
@@ -60,7 +58,7 @@
                 </div>
                 <div class="member">
                     <div class="imgbx">
-                        <img src="img/team.png">
+                        <img src="img/3.jpg">
                     </div>
                     <div class="details">
                         <h2>ALEJANDRO <br> <span> Supervisor Inmobiliario</span></h2>
@@ -68,7 +66,7 @@
                 </div>
                 <div class="member">
                     <div class="imgbx">
-                        <img src="img/team.png">
+                        <img src="img/1.jpg">
                     </div>
                     <div class="details">
                         <h2>TAMARA <br> <span> Gerente General</span></h2>
@@ -76,7 +74,7 @@
                 </div>
                 <div class="member">
                     <div class="imgbx">
-                        <img src="img/team.png">
+                        <img src="img/4.jpg">
                     </div>
                     <div class="details">
                         <h2>MAURICIO <br> <span> Gerente Personas</span></h2>
