--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="Noticias.html" onclick="alternar()">Noticias</a></li>
             <li><a href="Team.html" onclick="alternar()">Equipo</a></li>
             <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>
-            <li class="btn"><a href="#">Ingresar</a></li>
+            <li class="btn"><a href="https://altocomunidades.cl/">Ingresar</a></li>
         </ul>
         <div class="toggle" onclick="alternar()"></div>
     </header>
@@ -38,7 +38,7 @@
     Logros
     =================-->
 
-    <section class="sec stats" id="stats">
+    <section class="sec-stats" id="stats">
         <div class="content">
             <div class="about text">
                 <h3 class="animate__animated animate__flipInY">Logros</h3>                
@@ -72,42 +72,17 @@
         <div class="container">
             <div class="footer-row">
                 <div class="footer-links">
-                    <h4>Compañia</h4>
-                    <ul>
-                        <li><a href="">Nosotros</a></li>
-                        <li><a href="">Política de Privacidad</a></li>
-                        <li><a href="">Comunidad</a></li>
-                        <li><a href="">Enlaces</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Ayuda</h4>
-                    <ul>
-                        <li><a href="">Preguntas</a></li>
-                        <li><a href="">Apoyo</a></li>
-                        <li><a href="">Edificios</a></li>
-                        <li><a href="">Presupuestos</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Aliados</h4>
-                    <ul>
-                        <li><a href="">Proovedores</a></li>
-                        <li><a href="">Mantenimiento</a></li>
-                        <li><a href="">Softwares</a></li>
-                        <li><a href="">Junta de Vecinos</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
                     <h4>Siguenos</h4>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
+            <p class="footer-text">@Alto Comunidades 2024 | Todos los derechos Reservados</p>
     </footer>
     <script type="text/javascript">
         window.addEventListener("scroll", function () {
