--- a/index.html
+++ b/index.html
@@ -20,49 +20,51 @@
         <img src="img/logo.png" class="logo" alt="">
         <ul>
             <li><a href="index.html" onclick="alternar()">Inicio</a></li>
-            <li><a href="Nosotros.html" onclick="alternar()">Nosotros</a></li>
-            <li><a href="Servicios.html" onclick="alternar()">Servicios</a></li>
-            <li><a href="Noticias.html" onclick="alternar()">Noticias</a></li>
-            <li><a href="Team.html" onclick="alternar()">Equipo</a></li>
-            <li><a href="Contacto.html" onclick="alternar()">Contacto</a></li>
+            <li><a href="pages/Nosotros.html" onclick="alternar()">Nosotros</a></li>
+            <li><a href="pages/Servicios.html" onclick="alternar()">Servicios</a></li>
+            <li><a href="pages/Noticias.html" onclick="alternar()">Noticias</a></li>
+            <li><a href="pages/Team.html" onclick="alternar()">Equipo</a></li>
+            <li><a href="pages/Contacto.html" onclick="alternar()">Contacto</a></li>
             <li class="btn"><a href="https://altocomunidades.cl/">Ingresar</a></li>
         </ul>
         <div class="toggle" onclick="alternar()"></div>
     </header>
 
-    <section class="banner" id="home">
-        <h2 class="animate__animated animate__flipInY">ALTO COMUNIDADES</h2>
-    </section>
-
-    <!--=================
-    Logros
-    =================-->
-
-    <section class="sec-stats" id="stats">
-        <div class="content">
-            <div class="about text">
-                <h3 class="animate__animated animate__flipInY">Logros</h3>                
+    <main>        
+        <section class="banner" id="home">
+            <h2 class="animate__animated animate__flipInY">ALTO COMUNIDADES</h2>
+        </section>
+    
+        <!--=================
+        Logros
+        =================-->
+    
+        <section class="sec-stats" id="stats">
+            <div class="content">
+                <div class="about text">
+                    <h3 class="animate__animated animate__flipInY">Logros</h3>                
+                </div>
+                <div class="statsbox">
+                    <div class="box">
+                        <h2>15 +</h2>
+                        <h4>Años de Experiencia</h4>
+                    </div>
+                    <div class="box">
+                        <h2>3500 +</h2>
+                        <h4>Clientes Satisfechos</h4>
+                    </div>
+                    <div class="box">
+                        <h2>15 +</h2>
+                        <h4>Socios Estratégicos</h4>
+                    </div>
+                    <div class="box">
+                        <h2>5 +</h2>
+                        <h4>Dominio ERP</h4>
+                    </div>
+                </div>
             </div>
-            <div class="statsbox">
-                <div class="box">
-                    <h2>15 +</h2>
-                    <h4>Años de Experiencia</h4>
-                </div>
-                <div class="box">
-                    <h2>3500 +</h2>
-                    <h4>Clientes Satisfechos</h4>
-                </div>
-                <div class="box">
-                    <h2>15 +</h2>
-                    <h4>Socios Estratégicos</h4>
-                </div>
-                <div class="box">
-                    <h2>5 +</h2>
-                    <h4>Dominio ERP</h4>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!--=================
     Footer
