--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -17,14 +17,14 @@
 </head>
 <body>
     <header>
-        <img src="../img/logo.png" class="logo" alt="">        
+        <img src="../img/logo.png" class="logo">
         <ul>
             <li><a href="../index.html" onclick="alternar()">Inicio</a></li>
-            <li><a href="../pages/Nosotros.html" onclick="alternar()">Nosotros</a></li>
-            <li><a href="../pages/Servicios.html" onclick="alternar()">Servicios</a></li>
-            <li><a href="../pages/Noticias.html" onclick="alternar()">Noticias</a></li>
-            <li><a href="../pages/Team.html" onclick="alternar()">Equipo</a></li>
-            <li><a href="../pages/Contacto.html" onclick="alternar()">Contacto</a></li>
+            <li><a href="../pages/nosotros.html" onclick="alternar()">Nosotros</a></li>
+            <li><a href="../pages/servicios.html" onclick="alternar()">Servicios</a></li>
+            <li><a href="../pages/noticias.html" onclick="alternar()">Noticias</a></li>
+            <li><a href="../pages/team.html" onclick="alternar()">Equipo</a></li>
+            <li><a href="../pages/contacto.html" onclick="alternar()">Contacto</a></li>
             <li class="btn"><a href="https://altocomunidades.cl/">Ingresar</a></li>                               
         </ul>
         <div class="toggle" onclick="alternar()"></div>  
@@ -48,10 +48,10 @@
                     <form id="form">
                         <div class="row100">
                             <div class="inputbx50">
-                                <input type="text" name="" placeholder="Nombre">                        
+                                <input type="text" placeholder="Nombre">                        
                             </div>
                             <div class="inputbx50">
-                                <input type="text" name="" placeholder="Email">                        
+                                <input type="text" placeholder="Email">                        
                             </div>
                         </div>    
                         <div class="row100">
